--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,73 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
+/* /* font-family: 'DM Sans', sans-serif; */
+/* font-family: 'Poppins', sans-serif; */
+
+.wrapper {
+    max-width: 1900px;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+img {
+    width: 100%;
+}
+  
 body {
-    background-color: pink;
+    background-image: url("../assets/background.svg");
+    background-size: cover;
+    font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+    font-family: 'DM Sans', sans-serif;
+    text-transform: lowercase;
+    color: rgb(0, 0, 0);
+}
+
+button {
+    font-family: 'DM Sans', sans-serif;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 40vh;
+}
+
+.logo {
+    width: 20%;
+    background-color: rgb(41, 187, 187);
+    border-radius: 50%;
+    padding: 25px;
+}
+
+.modalBackground {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    z-index: 10; 
+}
+
+.modalContent {
+    background-color: ivory;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 25px;
+    border-radius: 25px;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    
+}
+
+.show {
+    display: block;
 }
