--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,7 @@ body {
     font-family: 'Poppins', sans-serif;
     color: aliceblue;
     position: relative;
+    overflow-x: hidden;
 }
 
 a {
@@ -68,6 +69,13 @@ button {
     padding: 25px;
 }
 
+.infoIcon {
+  height: 50px;
+  position: absolute;
+  top: 5%;
+  left: 44%;
+}
+
 .modalBackground {
     display: none;
     background-color: rgba(0, 0, 0, 0.5);
@@ -94,6 +102,8 @@ button {
 
 .modalIcon {
   height: 50px;
+  padding-top: 20px;
+  padding-left: 72%;
 }
 
 .modalText {
@@ -104,8 +114,24 @@ button {
     display: block;
 }
 
-.infoMenu {
+.hide {
   display: none;
+}
+
+.infoMenu {
+  position: absolute;
+  background-color: ivory;
+  color: black;
+  padding: 20px;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  text-align: center;
+  max-width: 400px;
+}
+
+.infoMenu p {
+  line-height: 6;
 }
 
 ul {
