added info menu and some more styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,7 @@ button {
 .infoIcon {
   height: 50px;
   position: absolute;
-  top: 5%;
+  top: 30px;
   left: 44%;
 }
 
@@ -107,7 +107,7 @@ button {
 }
 
 .modalText {
-  padding: 20px;
+  padding: 10px 48px;
 }
 
 .show {
